重命名程序集的 名称为：com.bshsf.csvutility

--- a/Packages/CsvUtility/Tests/Tests.asmdef
+++ b/Packages/CsvUtility/Tests/Tests.asmdef
@@ -4,7 +4,7 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "come.bshsf.zframework"
+        "com.bshsf.csvutility"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
