--- a/Packages/CsvUtility/package.json
+++ b/Packages/CsvUtility/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.bshsf.csvutility",
   "version": "1.0.0",
-  "displayName": "csv utility for unity",
+  "displayName": "Csv Utility",
   "description": "Toolkit for handling, loading, saving, updating, and appending .csv files.",
   "unity": "2019.4",
   "author": {
